# addended_ordered_map

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build_and_publish_crate.yml  md_lint.yml
crates/addended_ordered_map/: Cargo.toml  README.md
crates/addended_ordered_map/src/: find_settings.rs  lib.rs
crates/addended_ordered_map/src/fallible/: addendable_key_fallible.rs  addended_ordered_map_fallible.rs  mod.rs  sized_value_fallible.rs
crates/addended_ordered_map/src/infallible/: addendable_key.rs  addended_ordered_map.rs  mod.rs  sized_value.rs
crates/addended_ordered_map/src/python_bindings/: mod.rs  py_addended_ordered_map.rs  py_alias.rs  py_sized_value.rs
crates/addended_ordered_map_py/: Cargo.toml  README.md  pyproject.toml
crates/addended_ordered_map_py/python/addended_ordered_map/: addended_ordered_map.pyi
crates/addended_ordered_map_py/src/: lib.rs  py_addended_ordered_map.rs  py_alias.rs  py_find_settings.rs  py_into_iter.rs  py_key.rs  py_range_mut.rs  py_sized_value.rs
src/addended_ordered_map/: Cargo.toml  pyproject.toml
src/addended_ordered_map/python/: __init__.py  addended_ordered_map.pyi
src/addended_ordered_map/python/addended_ordered_map/: addended_ordered_map.pyi
src/addended_ordered_map/src/: addended_ordered_map.rs  find_settings.rs  lib.rs  sized_value.rs
src/addended_ordered_map/src/fallible/: addendable_key_fallible.rs  addended_ordered_map_fallible.rs  mod.rs  sized_value_fallible.rs
src/addended_ordered_map/src/infallible/: addendable_key.rs  addended_ordered_map.rs  mod.rs  sized_value.rs
src/addended_ordered_map/src/python_bindings/: mod.rs  py_addended_ordered_map.rs  py_alias.rs  py_find_settings.rs  py_into_iter.rs  py_range_mut.rs  py_sized_value.rs
tests/python/: basic_test.py
