# SPDX-FileCopyrightText: © 2026 Decompollaborate
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = [
    "src/addended_ordered_map",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
repository = "https://github.com/Decompollaborate/addended_ordered_map"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true
