# SPDX-FileCopyrightText: © 2026 Decompollaborate
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = [
    "crates/addended_ordered_map",
    "crates/addended_ordered_map_py",
]
resolver = "2"
default-members = [
    "crates/addended_ordered_map",
]

# [workspace.package]
# version = "0.1.0"
# authors = [
#     "Anghelo Carvajal <angheloalf95@gmail.com>",
# ]
# repository = "https://github.com/Decompollaborate/addended_ordered_map"

[profile.release]
debug = true
