# SPDX-FileCopyrightText: © 2026 Decompollaborate
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "addended_ordered_map_py"
version = "0.1.0"
# description = ""
edition = "2021"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Decompollaborate/addended_ordered_map"
readme = "README.md"
# keywords = []
# categories = []
publish = false

rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "addended_ordered_map"
path = "src/lib.rs"

[features]
default = []

[dependencies]
addended_ordered_map = { path = "../addended_ordered_map", features = ["std", "extract_if"] }

pyo3 = { version = "0.28" }
