# SPDX-FileCopyrightText: © 2026 Decompollaborate
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "addended_ordered_map"
version = "0.1.0"
# description = ""
edition = "2021"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Decompollaborate/addended_ordered_map"
readme = "README.md"
# keywords = []
categories = ["no-std"]

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked
# cargo msrv find -- cargo check -p addended_ordered_map
# ```
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "addended_ordered_map"
path = "src/lib.rs"

[features]
default = []
std = []

# Exposes the `extract_if` method.
# Bumps the MSRV to 1.91.
extract_if = []

# Compatibility with python bindings via pyo3
pyo3 = [
    "dep:pyo3",
    "std",
    "extract_if",
]

# Evil stuff, do not use.
nightly = []

[dependencies]
 # TODO: get rid of the polonius stuff when the new borrow checker has been released.
polonius-the-crab = "0"

pyo3 = { version = "0.28", optional = true }
